Installing mosquito from repo

--- a/Docker/config/supervisord.conf
+++ b/Docker/config/supervisord.conf
@@ -2,12 +2,12 @@
 nodaemon=true
 
 [program:mosquitto]
-command=/usr/local/sbin/mosquitto
+command=mosquitto
 stderr_logfile=/var/log/mosquitto.err.log  
 stdout_logfile=/var/log/mosquitto.out.log  
 
 [program:mongodb]
-command=mongod --db_path /usr/local/docker/mongodb
+command=mongod
 stderr_logfile=/var/log/mongo.err.log  
 stdout_logfile=/var/log/mongo.out.log  
 
