Password protecting mosquito

--- a/Docker/config/supervisord.conf
+++ b/Docker/config/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:mosquitto]
-command=mosquitto
+command=mosquitto -c /etc/mosquitto/mosquitto.conf
 stderr_logfile=/var/log/mosquitto.err.log  
 stdout_logfile=/var/log/mosquitto.out.log  
 
