--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -11,12 +11,14 @@
     "express": "~4.13.1",
     "express-session": "~1.13.0",
     "jade": "~1.11.0",
+    "mathjs": "^3.0.0",
     "mongoose": "~4.4.3",
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0",
+    "wait.for": "^0.6.6",
     "winston": "~2.1.1"
   }
 }
