--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -15,6 +15,7 @@
     "mongoose": "~4.4.3",
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
+    "node-uuid": "^1.4.7",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0",
