--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -12,6 +12,7 @@
     "express-session": "~1.13.0",
     "jade": "~1.11.0",
     "mathjs": "^3.0.0",
+    "moment": "^2.12.0",
     "mongoose": "~4.4.3",
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
@@ -19,6 +20,7 @@
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0",
+    "slackbotapi": "~1.3.7",
     "wait.for": "^0.6.6",
     "winston": "~2.1.1"
   }
