--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-session": "~1.13.0",
+    "intl": "^1.2.4",
     "jade": "~1.11.0",
     "mathjs": "^3.0.0",
     "moment": "^2.12.0",
