--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -6,8 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "easy-table": "^1.0.0",
     "express": "~4.13.1",
     "express-session": "~1.13.0",
     "intl": "^1.2.4",
