--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -12,6 +12,7 @@
     "easy-table": "^1.0.0",
     "express": "~4.13.1",
     "express-session": "~1.13.0",
+    "https": "^1.0.0",
     "intl": "^1.2.4",
     "jade": "~1.11.0",
     "mathjs": "^3.0.0",
