Specifying the startup directory

--- a/Docker/config/supervisord.conf
+++ b/Docker/config/supervisord.conf
@@ -12,7 +12,8 @@ stderr_logfile=/var/log/mongo.err.log
 stdout_logfile=/var/log/mongo.out.log  
 
 [program:nodejs]
-command=node /usr/local/docker/app/bin/www
+directory=/usr/local/docker/app
+command=node ./bin/www
 stderr_logfile=/var/log/nodejs.err.log  
 stdout_logfile=/var/log/nodejs.out.log 
 user=nodejs 
