--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
     "node-uuid": "^1.4.7",
+    "particle-api-js": "6.*",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "q": "^1.4.1",
