--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RuleEngineWeb",
-  "version": "0.0.0",
+  "name": "OpenHASWeb",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
