--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -20,8 +20,7 @@
     "mongoose": "~4.4.3",
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
-    "node-uuid": "^1.4.7",
-    "particle-api-js": "6.*",
+    "uuid": "^3.0.1",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "q": "^1.4.1",
