--- a/OpenHASWeb/package.json
+++ b/OpenHASWeb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenHASWeb",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -20,12 +20,13 @@
     "mongoose": "~4.4.3",
     "morgan": "~1.6.1",
     "mqtt": "^1.7.3",
-    "uuid": "^3.0.1",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "q": "^1.4.1",
     "serve-favicon": "~2.3.0",
     "slackbotapi": "~1.3.7",
+    "sns-validator": "^0.2.2",
+    "uuid": "^3.0.1",
     "wait.for": "^0.6.6",
     "winston": "~2.1.1"
   }
